# libMaoni

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  MaoniEqualizer.cmake  MaoniIceT.cmake  README  README.rst  VMMViewIceT.cmake  configure_VC9.bat  toolchain-gcc-snapshot.cmake  toolchain-mingw32.cmake
CMake/: AddDocumentation.cmake  AddReference.cmake  Extract.cmake  FindEqualizer.cmake  FindGLEW.cmake  FindQGLViewer.cmake  FindVMMView.cmake  Findlib3ds.cmake  UseBezierSurface.cmake  UseIceT.cmake  UseQtPropertyBrowser.cmake
MeshLoader/3DS/: 3ds.cpp
MeshLoader/PLY/: ply.cpp  plyfile.cpp
MeshLoader/STL/: stl.cpp  stla_io.h
Models/: Zippo_simple.3DS
RenderAlgorithm/: BlinnPhong.cpp  SimpleView.cpp  Teapot.cpp
VMMView/: CMakeLists.txt
VMMView/include/VMMView/: Enum.hpp  MeshLoader.hpp  ScopedLocks.hpp
VMMView/include/VMMView/detail/: Algorithm_PP_Simple.hpp  MeshLoader.hpp  Model.hpp  ShaderProgram.hpp  Vertex.hpp
VMMView/src/Common/: FrameData.cpp  FrameData.hpp  LightWidget.hpp  Mesh.cpp  teapot.h  texture.cpp
VMMView/src/Equalizer/: Pipe.hpp  main.cpp
VMMView/src/Widgets/: AlgorithmWidget.cpp  AlgorithmWidget.hpp  RenderControlWidget.cpp  RenderControlWidget.hpp  RenderWidget.cpp
contrib/IceT/: CMakeLists.txt
contrib/IceT/communication/: CMakeLists.txt  mpi.c
contrib/IceT/ice-t/: CMakeLists.txt  buckets.c  compress_func_body.h  context.c  decompress_func_body.h  diagnostics.c  draw.c  image.c  porting.c  projections.c  state.c  tiles.c
contrib/IceT/include/: context.h  diagnostics.h  image.h  porting.h  projections.h  state.h
contrib/IceT/include/GL/: ice-t.h  ice-t_buckets.h  ice-t_config.h.in  ice-t_mpi.h
contrib/IceT/strategies/: CMakeLists.txt  common.c  common.h  direct.c  reduce.c  serial.c  split.c  vtree.c
contrib/QtPropertyBrowser/: CMakeLists.txt
contrib/QtPropertyBrowser/src/: qtpropertybrowserutils_p.h
doc/: CMakeLists.txt  appendix.qbk  design.qbk  examples.qbk  examples.xml  getstarted.qbk  libMaoni.qbk  motivation.qbk  software.qbk  splashscreen.xml  tutorial.qbk
examples/: CMakeLists.txt
examples/Algorithms/: BlinnPhong.cpp  Brick.cpp  ComicStyle.cpp  DGLBumpMapping.cpp  Enum.cpp  FixedFunction.cpp  MultiTextureMapping.cpp  NormalDebug.cpp  OzoneBumpMapping.cpp  SimpleView.cpp  SphereMapping.cpp  SwiftlessBumpMapping.cpp  Teaset.c  Teaset.h  TextureMapping.cpp  Triangle.cpp
examples/Loaders/: VBOModel.cpp  VBOModel.hpp
examples/Loaders/3DS/: 3ds.cpp
examples/Loaders/PLY/: ply.cpp  plyfile.h
examples/Loaders/STL/: stl.cpp  stla_io.cpp
examples/Models/: blender_monkey.ply  budda.3DS  trico.ply
include/: Maoni.hpp  VMMView.hpp  eQute.hpp  teaset.h
include/Maoni/: Color.hpp  Enum.hpp  Math.hpp  MeshLoader.hpp  Model.hpp  Path.hpp  RenderAlgorithm.hpp  ScopedLocks.hpp  ShaderProgram.hpp  Texture.hpp  Vector.hpp  Vertex.hpp
include/Maoni/detail/: Algorithm.hpp  Algorithm_PP.hpp  Algorithm_PP_Equalizer.hpp  Algorithm_PP_Simple.hpp  Enum.hpp  Extensible.hpp  MeshLoader.hpp  ScopedLocks.hpp  ShaderProgram.hpp  Vector.hpp
include/VMMView/: Color.hpp  MeshLoader.hpp  RenderAlgorithm.hpp  ScopedLocks.hpp  ShaderProgram.hpp  Texture.hpp  Vertex.hpp
include/VMMView/detail/: Algorithm.hpp  Extensible.hpp  Matrix.hpp  Mesh.hpp  MeshLoader.hpp  ScopedLocks.hpp
include/vmmlib/: vector.hpp
src/: CMakeLists.txt  Maoni.cpp  main.cpp  version.rc
src/Common/: AlgorithmWidget.cpp  AlgorithmWidget.hpp  AnimationWidget.cpp  Bunny.cpp  Bunny.hpp  CMakeLists.txt  ConfigWindow.hpp  FrameData.cpp  FrameData.hpp  ImportExport.cpp  ImportExport.hpp  Light.cpp  Light.hpp  LightWidget.cpp  LightWidget.hpp  Logo.cpp  Logo.hpp  MainWindow.cpp  MainWindow.hpp  MeshLoader.cpp  Model.cpp  Path.cpp  RenderWidget.cpp  RenderWidget.hpp  ShaderProgram.cpp  Teaset.c  TextOutput.hpp  Texture.cpp  Tile.hpp  serialize.hpp  texture.cpp  trackball.c  trackball.h
src/Equalizer/: CMakeLists.txt  Channel.cpp  Channel.hpp  ColoredOutput.hpp  Config.cpp  Config.hpp  EqInclude.hpp  FrameDataEq.cpp  FrameDataEq.hpp  GLWindow.hpp  Node.hpp  NodeFactory.cpp  NodeFactory.hpp  Pipe.hpp  RenderWidget.cpp  RenderWidget.hpp  Window.cpp  Window.hpp  eQute.hpp  main.cpp
src/IceT/: CMakeLists.txt  FrameData.cpp  FrameData.hpp  IceTWidget.cpp  IceTWidget.hpp  RenderWidget.cpp  RenderWidget.hpp  Tile.hpp  TilesWidget.cpp  TilesWidget.hpp  main.cpp  serialize.hpp
src/Icons/: stanford-bunny.xpm
src/Images/: stanford-bunny.hqx  stanford-bunny.icns  stanford-bunny.xpm
src/QGLViewer/: CMakeLists.txt
src/QPropertyBrowser/: CMakeLists.txt  qvector2dpropertymanager.cpp  qvector2dpropertymanager.h  qvector3dpropertymanager.cpp  qvector3dpropertymanager.h  qvector4dpropertymanager.cpp  qvector4dpropertymanager.h
src/Simple/: main.cpp
src/Widgets/: AlgorithmWidget.cpp  AlgorithmWidget.hpp  AnimationWidget.hpp  CMakeLists.txt  LightWidget.cpp  LightWidget.hpp  MainWindow.cpp  MainWindow.hpp  RenderControlWidget.cpp  RenderWidget.cpp  RenderWidget.hpp  Resources.qrc  TextOutput.hpp  TilesWidget.cpp  TilesWidget.hpp
src/libQGLViewer/: CMakeLists.txt
win32/include/QGLViewer/: manipulatedCameraFrame.h  manipulatedFrame.h
